--- a/Password_generator/index.html
+++ b/Password_generator/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Password generator</h1>
     <label id="password">Click to generate Password</label>
     <div class="centeredDiv">
-        <label>Password length:</label><input type="text" id="passwordLength">
+        <label>Password length:</label><input type="number" id="passwordLength">
     </div>
     
     <div id="buttonContainer" class="centeredDiv">
@@ -19,11 +19,11 @@
         <button id="copyToClipboard" class="buttons">Copy to clipboard</button>
     </div>
     <div id="checkContainer" class="centeredDiv">
-        <input type="checkbox" id="numbers" class="inputs">
+        <input type="checkbox" id="numbers" class="inputs" checked>
         <label for="numbers">Numbers</label>  
-        <input type="checkbox" id="capitalLetters" class="inputs">
+        <input type="checkbox" id="capitalLetters" class="inputs" checked>
         <label for="capitalLetters">Capital letters</label>
-        <input type="checkbox" id="smallLetters" class="inputs">
+        <input type="checkbox" id="smallLetters" class="inputs" checked>
         <label for="smallLetters">Small letters</label>
     </div>
     <div id="responseContainer" class="centeredDiv">
